--- a/app/src/main/res/layout/activity_obscured.xml
+++ b/app/src/main/res/layout/activity_obscured.xml
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ImageView xmlns:android="http://schemas.android.com/apk/res/android"
+<TextView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/iv_obscured"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/app_icon"
     tools:context="com.test.emptydemo.ObscuredActivity"
     >
 
-</ImageView>
+</TextView>
