--- a/app/src/main/res/layout/activity_second.xml
+++ b/app/src/main/res/layout/activity_second.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<TextView xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/activity_second"
     android:layout_width="match_parent"
@@ -8,8 +8,21 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:textSize="20sp"
-    android:text="mytest"
+    android:orientation="vertical"
     tools:context="com.test.emptydemo.SecondActivity">
+    <Button
+        android:onClick="circlereveal"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="circlereveal"
+        />
+    <com.test.emptydemo.CircleView
+        android:id="@+id/circleview"
+        android:layout_width="200dp"
+        android:layout_height="200dp" />
 
-</TextView>
+    <com.test.emptydemo.CircleWaveView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
+
+</LinearLayout>
