--- a/app/src/main/res/layout/headerfooter.xml
+++ b/app/src/main/res/layout/headerfooter.xml
@@ -4,6 +4,6 @@
     android:id="@+id/xrecyclerview"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.test.emptydemo.HeaderFooterActivity">
+    tools:context="com.test.emptydemo.AwsomeHeaderActivity">
 
 </com.jcodecraeer.xrecyclerview.XRecyclerView>
