--- a/app/src/main/res/layout/activity_modelshow.xml
+++ b/app/src/main/res/layout/activity_modelshow.xml
@@ -14,6 +14,13 @@
         android:layout_alignParentTop="true" />
 
     <ImageView
+        android:id="@+id/circle"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_centerInParent="true" />
+
+
+    <ImageView
         android:id="@+id/centericon"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
