--- a/app/src/main/res/layout/activity_second.xml
+++ b/app/src/main/res/layout/activity_second.xml
@@ -1,15 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
-<TextView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/tv"
+<merge xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:modelview="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:textSize="20sp"
-    android:text="mytest"
-    tools:context="com.test.emptydemo.SecondActivity">
+    android:layout_height="match_parent">
 
-</TextView>
+    <TextView xmlns:tools="http://schemas.android.com/tools"
+        android:id="@+id/tv"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:paddingBottom="@dimen/activity_vertical_margin"
+        android:paddingLeft="@dimen/activity_horizontal_margin"
+        android:paddingRight="@dimen/activity_horizontal_margin"
+        android:paddingTop="@dimen/activity_vertical_margin"
+        android:text="mytest"
+        android:textSize="20sp"
+        tools:context="com.test.emptydemo.SecondActivity">
+
+    </TextView>
+
+    <com.test.emptydemo.ModelView
+        android:id="@+id/modelview"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        modelview:bigpicid="@drawable/beauty1">
+
+    </com.test.emptydemo.ModelView>
+</merge>
